# Xelma-Blockchain

./: .pre-commit-config.yaml  CONTRIBUTING.md  MIGRATION.md  README.md  SECURITY_REVIEW.md  fix_types.ps1  fix_types.py
.github/workflows/: ci.yml
bindings/src/: index.ts
contracts/: Cargo.toml
contracts/scripts/: edit_fee_reviewfix.py
contracts/src/: contract.rs  errors.rs  lib.rs  types.rs
contracts/src/tests/: cei_ordering.rs  commit_reveal_e2e.rs  initialization.rs  invariant_harness.rs  lifecycle.rs  migration_versioning.rs  mod.rs  mode_tests.rs  overflow_tests.rs  pause.rs  resolution.rs  security.rs
docs/: CEI_AUDIT.md  ORACLE_OPERATOR_RUNBOOK.md
scripts/: check_spec_drift.py
